* (bug 9033) Use a more specific error message when users are not able/allowed
  to edit page protection levels due to a block, database lock or permissions
* Fixed $wgFeedLimit
* (bug 9270) Corrected help namespace name for Dutch Lower Saxon (nds-nl)
* (bug 929, 4215) Expose "rcdays" user preference in Special:Preferences
* (bug 9554) Extension-provided group name messages not used

== Maintenance ==

* New script maintenance/language/checkExtensioni18n.php used to check i18n
  progress in the extension repository.
* Running maintenance/parserTests.php with '--record' option, will now
  automatically attempt to create the required tables
* --purge option to do additional parser-cache purging for purgeList.php
* Fix hardcoded background color in parserTests.php
* parserTests.php : removed the 'light' option for --color argument, replacing
  it with a new global switch : $wgCommandLineDarkBg
* (bug 8780) Clarify message for command-line scripts if LocalSettings.php
  exists but is not readable
* dumpBackup / importDump now work with PostgreSQL
* (bug 8975) Use "Maintenance script" as the default username for importImages.php
  and importTextFile.php scripts
* (bug 8933) Fix maintenance/reassignEdits.php script
* (bug 9440) Added "mediawikiwiki" interwiki prefix to MediaWiki.org
* (bug 2979) Import now gracefully skips invalid titles with a warning
* Restore '--norc' option for maintenance/importTextFile.php
* Help information for maintenance/importTextFile.php now easier to read on
  consoles

== Languages updated ==

* Arabic (ar)
* Aramaic (arc)
* Aymara (ay)
* Belarusian normative (be)
* Belarusian alternative (be-x-old)
* Bulgarian (bg)
* Bihara (bh)
* Breton (br)
* Catalan (ca)
* Czech (cs)
* Danish (da)
* German (de)
* Greek (el)
* Esperanto (eo)
* Spanish (es)
* Estonian (et)
* Basque (eu)
* Finnish (fi)
* French (fr)
* Hebrew (he)
* Upper Sorbian (hsb)
* Hungarian (hu)
* Indonesian (id)
* Italian (it)
* Japanese (ja)
* Javanese (jv)
* Georgian (ka)