@@ -311,6 +311,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 9270) Corrected help namespace name for Dutch Lower Saxon (nds-nl)
 * (bug 929, 4215) Expose "rcdays" user preference in Special:Preferences
 * (bug 9554) Extension-provided group name messages not used
+* (bug 9565) Translate template namespace name for Hindi (hi)
 
 == Maintenance ==
 
@@ -356,6 +357,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Finnish (fi)
 * French (fr)
 * Hebrew (he)
+* Hindi (hi)
 * Upper Sorbian (hsb)
 * Hungarian (hu)
 * Indonesian (id)
